Alberto second commit

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </main>
     <footer>
         <div class="socialMedia">
-            <a href="https://github.com/TOKIO-V2">
+            <a href="https://github.com/TOKIO-V2" class="link">
                 <img class="logo" src="img/logotipo-de-github.png" alt="Logotipo De GitHub">
                 <p>Alberto`s GitHub</p>
             </a>
 
-            <a href="https://github.com/Camposx">
+            <a href="https://github.com/Camposx" class="link">
                 <img class="logo" src="img/logotipo-de-github.png" alt="Logotipo De GitHub">
                 <p>Alejandro`s GitHub</p>
             </a>
