Member cards, Alberto's pic resized and fixed img fill bug

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <div class="member">
                 <img class="profilePic" src="img/alejandroProfilePic.jpeg" alt="Foto del miembro del equipo, Alejandro">
                 <h2>Alejandro Campos González</h2>
-                <p>
-                    
+                <p class="memberDescription">
+                    Old developer with 23 yeas old Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Sint obcaecati placeat in quidem voluptatem cupiditate. Quia sint incidunt similique, 
+                    cumque aspernatur minima debitis autem qui numquam beatae ipsam. Accusamus, molestiae.
                 </p>
             </div>
     
