Added logo, some css fixes and colors.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>EQUIPO 2</h1>
+        <img class="logoAA" src="img/Diseño sin título (1).png" alt="">
+        <h1>AA TECH</h1>
     </header>
     <main>
         <div class="teamDescription">
@@ -24,7 +25,7 @@
                 <p class="memberDescription">
                     Old developer with 23 yeas old Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Sint obcaecati placeat in quidem voluptatem cupiditate. Quia sint incidunt similique, 
-                    cumque aspernatur minima debitis autem qui numquam beatae ipsam. Accusamus, molestiae.
+                    cumque aspernatur minima debitis autem.
                 </p>
             </div>
     
