Added Footer Icons for social medias, fix names of the achievements.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logoAA" src="img/Diseño sin título (1).png" alt="">
+        <img class="logoAA" src="img/enterpriseLogo.png" alt="Logo de la Empresa AATech">
         <h1>AA TECH</h1>
     </header>
     <main>
@@ -55,16 +55,36 @@
 
     </main>
     <footer>
-        <div class="socialMedia">
+        <div class="teamFooter">
             <a href="https://github.com/TOKIO-V2" class="link">
-                <img class="logo" src="img/logotipo-de-github.png" alt="Logotipo De GitHub">
+                <img class="logo" src="img/gitHubLogo.png" alt="Logotipo De GitHub">
                 <p>Alberto`s GitHub</p>
             </a>
 
             <a href="https://github.com/Camposx" class="link">
-                <img class="logo" src="img/logotipo-de-github.png" alt="Logotipo De GitHub">
+                <img class="logo" src="img/gitHubLogo.png" alt="Logotipo De GitHub">
                 <p>Alejandro`s GitHub</p>
             </a>
+        </div>
+        <div class="legalStuff">
+            <ul>
+                <li>Accessibility</li>
+                <li>Security</li>
+                <li>Privacy Policy</li>
+                <li>Manage Cookies</li>
+                <li>Copyright <img src="img/copyrightLogo.png" alt="Logo de Copyright" class="logoF"></li>
+            </ul>
+        </div>
+
+        <div class="socialMedia">
+
+            <ul>
+                <li>AATech <img src="img/instagramLogo.png" alt="Logotipo de Instagram" class="logoF"></li>
+                <li>AATech <img src="img/linkedinLogo.png" alt="Logotipo de LinkedIn" class="logoF"></li>
+                <li>AATech <img src="img/youtubeLogo.png" alt="Logotipo de Youtube" class="logoF"></li>
+                <li>AATech <img src="img/twitchLogo.png" alt="twitchLogo" class="logoF"></li>
+            </ul>
+
         </div>
     </footer>
 </body>
