Added Team description and fixes with one member photo.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
     
             <div class="member">
-                <img class="profilePic" src="img/albertoProfilePic.jpeg" alt="Foto del miembro del equipo, Alberto">
+                <img class="profilePic" src="img/albertoProfilePhoto.jpeg" alt="Foto del miembro del equipo, Alberto">
                 <h2>Alberto Hernández Galeote</h2>
                 <p class="memberDescription">
                     Young developer with 22 years old who wants to discover everything about this world called programing.
@@ -38,14 +38,9 @@
             <div class="teamDescription">
                 <h2>Team description</h2>
                 <p>
-                    We are two juniors developers. Lorem ipsum dolor,
-                     sit amet consectetur adipisicing elit. Nihil pariatur nostrum,
-                      reprehenderit quas fugiat sequi sapiente veritatis, 
-                      quia, repellendus ipsum blanditiis non eum voluptas. Ea odit aliquam labore a ducimus!
-                      We are two juniors developers. Lorem ipsum dolor,
-                     sit amet consectetur adipisicing elit. Nihil pariatur nostrum,
-                      reprehenderit quas fugiat sequi sapiente veritatis, 
-                      quia, repellendus ipsum blanditiis non eum voluptas. Ea odit aliquam labore a ducimus!
+                    We are two young students who want to learn to program since we really like this world and we want to join it,
+                     we have a lot to teach the world about ourselves and our future projects that we hope you will see sometime.
+                     Thank you for the opportunity and reading this.
 
                 </p>
             </div>
