--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
                 <img class="profilePic" src="img/alejandroProfilePic.jpeg" alt="Foto del miembro del equipo, Alejandro">
                 <h2>Alejandro Campos González</h2>
                 <p class="memberDescription">
-                    Old developer with 23 yeas old Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Sint obcaecati placeat in quidem voluptatem cupiditate. Quia sint incidunt similique, 
-                    cumque aspernatur minima debitis autem.
+                    I am 23 years old, I am a beginner developer, since I discovered the world of programming 
+                    I felt really attracted to it and eager to grow and improve.
                 </p>
             </div>
     
@@ -64,7 +63,7 @@
                 </a>
             </div>
             <div class="legalStuff">
-                <h3 class="footerTitles">Our team</h3>
+                <h3 class="footerTitles">Legality</h3>
                 <ul>
                     <li>Accessibility</li>
                     <li>Security</li>
@@ -75,7 +74,7 @@
             </div>
     
             <div class="socialMedia">
-                <h3 class="footerTitles">Our team</h3>
+                <h3 class="footerTitles">Social Media</h3>
                 <img src="img/twitchLogo.png" alt="twitchLogo" class="logo">
                 <img src="img/instagramLogo.png" alt="Logotipo de Instagram" class="logo">
                 <img src="img/linkedinLogo.png" alt="Logotipo de LinkedIn" class="logo">
