Delete comment from html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li>Security</li>
                     <li>Privacy Policy</li>
                     <li>Manage Cookies</li>
-                    <li>Copyright <!-- <img src="img/copyrightLogo.png" alt="Logo de Copyright" class="logo"> --></li>
+                    <li>Copyright</li>
                 </ul>
             </div>
     
